--- a/planet.yml
+++ b/planet.yml
@@ -1,19 +1,13 @@
 ## Planet.rb default config file, modify it and spawn awesomeness!
 
 planet:
-    posts_directory: source/_posts/
-    templates_directory: source/_layouts/
+    posts_directory: _posts/
+    templates_directory: _layouts/
     whitelisted_tags: []
 
 blogs:
   # Bare minimum to get it working
-  - author: "Cubox"
-    feed:   "http://blog.cuboxlabs.com/atom.xml"
-    image:  "http://cuboxlabs.com/img/cubox-humans/could-be-you.png"
-
-  - author: "Pablo Astigarraga"
-    feed:   "http://blog.poteland.com/atom.xml"
-    image:  "http://poteland.com/images/avatars/red_mage.png"
-    # Other fields:
-    twitter: "poteland"
-    url: "http://blog.poteland.com"    # => only required for people that don\'t have a \'url\' field on their RSS/Atom field'
+  - author:   "Maciej (Developer Website)"
+    feed:     "http://pinoit.blogspot.in/feeds/posts/default"
+    categories: "gsoc"
+    tags: "design page programming"
