--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Tim Videos Planet - Developers news
 description: "News from our best developers, all news aggregated by planet."
 url: "http://planet.timvideos.us"
-exclude: [Gemfile, Gemfile.lock, planet.yml, README.md]
+exclude: [Gemfile, Gemfile.lock, planet.yml, README.md, .bundle, vendor]
 
 markdown: kramdown
 permalink: pretty
