Add RSS generators for each category and tag

--- a/_config.yml
+++ b/_config.yml
@@ -19,3 +19,5 @@ rss_name: feed.xml
 rss_post_limit: 20
 rss_allowed_tags: news
 rss_allowed_types: standard
+rss_categories: gsoc-2014 gsoc-2014-hdmi2usb
+rss_tags: news github
