Improve Diagram Issues filter

--- a/_config.yml
+++ b/_config.yml
@@ -26,4 +26,4 @@ rss:
   tags: news github
 
 issues:
-  special_filters: Project Skill Level Type Language Backend firmware
+  special_filters: Project Skill Level Type Language Backend board firmware
